# trm

./: .gitignore  README.md  pyproject.toml
trm/: trm.py
