[project]
name = "trm"
version = "0.1.0"
description = ""
authors = [
    {name = "Kokonico",email = "kokonico@duck.com"}
]
requires-python = "^3.14"
dependencies = [
    "playsound3 (>=3.3.1,<4.0.0)"
]
scripts = {trm = "trm.trm:main"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
